--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,11 @@ pydantic==2.12.5
 prometheus-client==0.23.1
 
 mlflow==3.8.0
+boto3==1.42.16
 pandas==2.3.3
+
+# Model runtime deps (needed by the serving container to load the model)
+fastai==2.8.6
+torch==2.9.1
+torchvision==0.24.1
+scikit-learn==1.8.0
