--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ prometheus-client==0.23.1
 mlflow==3.8.0
 boto3==1.42.16
 pandas==2.3.3
+ipython==8.18.1
 
 # Model runtime deps (needed by the serving container to load the model)
 fastai==2.8.6
